[gd_scene load_steps=9 format=3 uid="uid://bfulrycfu1kq"]

[ext_resource type="Script" uid="uid://bmkm3dbkq1frj" path="res://scripts/name_conf.gd" id="1_47pxh"]
[ext_resource type="Texture2D" uid="uid://ceaj2xytttlh" path="res://media/imagenes/main_menu.png" id="1_uhbsv"]
[ext_resource type="Texture2D" uid="uid://bc02rtx67qijm" path="res://media/imagenes/game_title.png" id="2_qt1va"]
[ext_resource type="FontFile" uid="uid://c3y1owof88k4m" path="res://fonts/Good-Game.ttf" id="3_4pbda"]
[ext_resource type="AudioStream" uid="uid://btbqovhibck81" path="res://media/sonidos/sonido_botones.wav" id="5_h1nud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47pxh"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qt1va"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 0.5686275, 0.3019608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.1882353)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pbda"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 0.5686275, 0.3019608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.1882353)
shadow_size = 4

[node name="NameConf" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47pxh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uhbsv")

[node name="TextureRectTitulo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -437.0
offset_right = 368.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_qt1va")

[node name="TextEditNombre" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.25
offset_top = 16.0
offset_right = 263.25
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.6)
theme_override_fonts/font = ExtResource("3_4pbda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_47pxh")
placeholder_text = "INGRESE SU NOMBRE AQUI	"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -262.5
offset_top = -376.0
offset_right = 262.5
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25

[node name="ButtonContinuar" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4pbda")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_qt1va")
text = "CONTINUAR"

[node name="ButtonRegresar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4pbda")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_4pbda")
text = "REGRESAR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("5_h1nud")

[connection signal="pressed" from="VBoxContainer/ButtonContinuar" to="." method="_on_button_continuar_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRegresar" to="." method="_on_button_regresar_pressed"]
